updated links to repositories and live sites.

--- a/public/css/style-sky-blue.css
+++ b/public/css/style-sky-blue.css
@@ -89,9 +89,9 @@ a:hover {
   background-position: center center;
 }
 
-.overlay-mf {
+/* .overlay-mf {
   background-color: #48abec;
-}
+} */
 
 .overlay-mf {
   position: absolute;
