--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,9 +83,9 @@ a:hover {
   background-position: center center;
 }
 
-.overlay-mf {
+/* .overlay-mf {
   background-color: #0078ff;
-}
+} */
 
 .overlay-mf {
   position: absolute;
