--- a/public/css/style-sky-blue.css
+++ b/public/css/style-sky-blue.css
@@ -10,8 +10,8 @@
 ======================================*/
 
 body {
-  background-color: #f5f5f5;
-  color: #4e4e4e;
+  background-color: #411d4def;
+  color: hsl(0, 0%, 31%);
 }
 
 h1,
