--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@ GENERAL STYLING
 */
 
 body {
-  background-color: #f5f5f5;
+  background-color: #5a4a4a;
   color: #4e4e4e;
 }
 
@@ -23,7 +23,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #5f1094;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
