working on navbar styling

--- a/src/style-purple.css
+++ b/src/style-purple.css
@@ -140,7 +140,8 @@ a:hover {
 }
 
 .sect-mt4 {
-  margin-top: 4rem;
+  margin-top: 0rem;
+  /* margin-top: 4rem; */
 }
 
 /*--/ Title s /--*/
@@ -485,7 +486,8 @@ a:hover {
 
 .navbar-b.navbar-reduce {
   transition: all .5s ease-in-out;
-  background-color: #fff;
+  background-color: rgba(0, 0, 0, 0.8);
+  /* background-color: #fff; */
   padding-top: 15px;
   padding-bottom: 15px;
 }
@@ -680,6 +682,10 @@ a:hover {
 /*======================================
 //--//-->   ABOUT
 ======================================*/
+.aboutContainer{
+  background-color: black;
+  z-index: 1000;
+}
 
 .about-mf .box-shadow-full {
   padding-top: 4rem;
