--- a/src/style-purple.css
+++ b/src/style-purple.css
@@ -55,7 +55,7 @@ a:hover {
 .service-box,
 .work-box,
 .card-blog {
-  box-shadow: 0 13px 8px -10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 13px 8px -10px #ec37e7;
 }
 
 .box-shadow-a,
@@ -137,6 +137,7 @@ a:hover {
 
 .sect-pt4 {
   padding-top: 4rem;
+  background-color: black;
 }
 
 .sect-mt4 {
@@ -516,7 +517,7 @@ a:hover {
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
-  background-color: #1B1B1B;
+  background-color: white;
 }
 
 .navbar-b .navbar-brand {
