--- a/src/style-purple.css
+++ b/src/style-purple.css
@@ -688,6 +688,10 @@ a:hover {
   z-index: 1000;
 }
 
+.about-me-center{
+  text-align: center;
+}
+
 .about-mf .box-shadow-full {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -695,6 +699,11 @@ a:hover {
 
 .about-mf .about-img {
   margin-bottom: 2rem;
+}
+
+.about-title-center {
+  font-size: 2rem;
+  text-align: center;
 }
 
 .about-mf .about-img img {
